// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/sign-out command should not sign out if cancelled 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "No",
          "style": 2,
          "type": 2,
        },
        {
          "custom_id": "confirm",
          "emoji": undefined,
          "label": "Yes, sign out",
          "style": 4,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Are you sure to sign out the bot? This will stop translating any further messages.",
}
`;

exports[`/sign-out command should not sign out if cancelled 2`] = `
{
  "components": [],
  "content": "Signing out has been cancelled.",
}
`;

exports[`/sign-out command should not sign out if timed out 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "No",
          "style": 2,
          "type": 2,
        },
        {
          "custom_id": "confirm",
          "emoji": undefined,
          "label": "Yes, sign out",
          "style": 4,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Are you sure to sign out the bot? This will stop translating any further messages.",
}
`;

exports[`/sign-out command should not sign out if timed out 2`] = `
{
  "components": [],
  "content": "Confirmation not received within 30 seconds, cancelling.",
}
`;

exports[`/sign-out command should notify user that they're already signed out 1`] = `
{
  "content": "You are already signed out.",
}
`;

exports[`/sign-out command should notify user that this command is only for servers 1`] = `
{
  "content": "This command is only available on servers.",
}
`;

exports[`/sign-out command should sign out 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "cancel",
          "emoji": undefined,
          "label": "No",
          "style": 2,
          "type": 2,
        },
        {
          "custom_id": "confirm",
          "emoji": undefined,
          "label": "Yes, sign out",
          "style": 4,
          "type": 2,
        },
      ],
      "type": 1,
    },
  ],
  "content": "Are you sure to sign out the bot? This will stop translating any further messages.",
}
`;

exports[`/sign-out command should sign out 2`] = `
{
  "components": [],
  "content": "You have successfully signed out the bot.",
}
`;
